# crabpot

./: .gitignore  README.md  pyproject.toml  pytest.ini
crabpot/: __init__.py  cli.py  configuration.py  constants.py  crab.py  exceptions.py  pot.py  runner.py  util.py
crabpot/commands/: create.py  info.py  reset.py  resubmit.py  status.py  submit.py
docs/: sample_config.py  sample_template.py
tests/: conftest.py  factories.py  test_crab.py  test_pot.py  test_util.py
tests/commands/: test_create.py  test_info.py  test_reset.py  test_resubmit.py  test_status.py  test_submit.py
tests/fixtures/: bad_syntax_config.py  invalid_config.py  valid_config.py  valid_crab_config.py
